restructured the pages

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ngx-bootstrap": "^5.6.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "sejda-js": "^2.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
